# RedisAI

./: .astylerc  .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-gpu  Dockerfile.arm  Dockerfile.gpu  Dockerfile.gpu-test  Dockerfile.jetson  Install_RedisGears.sh  LICENSE  Makefile  README.md  TODO.md  build_deps.sh  codeql-analysis.yml  commands.json  get_deps.sh  mkdocs.yml  ramp-light.yml  ramp-lite.yml  ramp-rce.yml  ramp.yml  system-setup.py
.circleci/: config.yml  config.yml-WORKS
.github/: wordlist.txt
automation/: Makefile  pack.sh  system-setup.py
docker/: Dockerfile  README.md
docs/: Doxyfile  api_reference.md  clients.md  commands.md  configuration.md  configuring.md  contrib.md  dataandbackend.md  developer-backends.md  developer.md  examples.md  generate_llapi_reference.py  index.md  intro.md  performance.md  quickstart.md  requirements-llapi.txt  requirements.txt
examples/: readme.md
js/: mobilenet.js
models/: dump_img.py  graph2.pb  load_model.sh  load_yolo.sh  load_yolo2.sh  sample_computer.raw  tf-minimal.py
opt/: 1.2diff.txt  Makefile  MakefileCopy  clang-check-all.sh  clang-format-all.sh  getver  pack.sh  redis_valgrind.sup  system-setup.py
src/: CMakeLists.txt  Makefile  async_llapi.c  async_llapi.h  backends.c  backends.h  backends_tensorflow.c  backends_tensorflow.h  background_workers.c  background_workers.h  command_parser.c  command_parser.h  config.c  config.h  dag.c  dag.h  dag_llapi.c  dag_llapi.h  dag_parser.c  dag_parser.h  err.c  err.h  graph.c  graph.h  graph_struct.h  model.c  model.h  modelRun_ctx.c  modelRun_ctx.h  model_script_run_session.c  model_script_run_session.h  model_struct.h  redisai.c  redisai.h  redisai_memory.h  redisdl.c  redisdl.h  redismodule.h  redistf.c  run_info.c  (+10 more)
src/DAG/: dag.c  dag.h  dag_builder.c  dag_builder.h  dag_execute.c  dag_execute.h  dag_parser.c  dag_parser.h
src/backends/: backedns_api.h  backends.c  backends.h  backends_api.h  onnx_timeout.c  onnx_timeout.h  onnxruntime.c  onnxruntime.h  tensorflow.c  tensorflow.h  tensorflow_backend.c  tensorflow_backend.h  tflite.c  tflite.h  torch.c  torch.h  util.c  util.h
src/backends/libtflite_c/: CMakeLists.txt  tflite_c.cpp  tflite_c.h
src/backends/libtorch_c/: CMakeLists.txt  torch_c.cpp  torch_c.h
src/backends/libtorch_c/torch_extensions/: torch_redis.cpp  torch_redis.h
src/backends/onnx_allocator/: CMakeLists.txt  onnx_allocator.cpp  onnx_allocator.h
src/config/: config.c  config.h  gdb_config.h
src/execution/: background_modelset.c  background_modelset.h  background_workers.c  background_workers.h  command_parser.c  command_parser.h  deprecated.c  deprecated.h  modelRun_ctx.h  onnx_timeout.c  onnx_timeout.h  run_info.c  run_info.h  run_queue_info.c  run_queue_info.h  utils.c  utils.h
src/execution/DAG/: dag.c  dag.h  dag_builder.c  dag_builder.h  dag_execute.c  dag_execute.h  dag_op.c  dag_op.h  dag_parser.c
src/execution/execution_contexts/: execution_ctx.c  execution_ctx.h  modelRun_ctx.c  modelRun_ctx.h  scriptRun_ctx.c  scriptRun_ctx.h
src/execution/execution_contxets/: scriptRun_ctx.c  scriptRun_ctx.h
src/execution/parsing/: dag_parser.c  dag_parser.h  deprecated.c  deprecated.h  model_commands_parser.c  model_commands_parser.h  parse_utils.c  parse_utils.h  script_commands_parser.c  script_commands_parser.h  tensor_commands_parsing.c  tensor_commands_parsing.h
src/libtflite_c/: tflite_c.cpp  tflite_c.h
src/libtorch_c/: CMakeLists.txt  torch_c.cpp  torch_c.h
src/libtorch_c/torch_extensions/: torch_redis.cpp  torch_redis.h  torch_redis_value.h
src/redis_ai_objects/: err.c  err.h  model.c  model.h  model_struct.h  script.c  script.h  script_struct.h  stats.c  stats.h  tensor.c  tensor.h  tensor_struct.h
src/redis_ai_types/: model_type.c  model_type.h  script_type.c  script_type.h  tensor_type.c  tensor_type.h
src/rmutil/: alloc.c  alloc.h  args.c  args.h  heap.c  heap.h  khash.h  priority_queue.c  priority_queue.h  sds.c  sds.h  sdsalloc.h  vector.c  vector.h
src/script/: script_struct.h
src/serialization/: ai_datatypes.c  serialization_include.h
src/serialization/AOF/: rai_aof_rewrite.c  rai_aof_rewrite.h
src/serialization/RDB/decoder/: decode_previous.c  decode_previous.h  rai_rdb_decoder.c  rai_rdb_decoder.h
src/serialization/RDB/decoder/current/v1/: decode_v1.c  decode_v1.h
src/serialization/RDB/decoder/current/v100/: decode_v100.c  decode_v100.h
src/serialization/RDB/decoder/current/v2/: decode_v2.c  decode_v2.h
src/serialization/RDB/decoder/current/v3/: decode_v3.c
src/serialization/RDB/decoder/current/v4/: decode_v4.c  decode_v4.h
src/serialization/RDB/decoder/previous/v0/: decode_v0.c  decode_v0.h
src/serialization/RDB/decoder/previous/v1/: decode_v1.c  decode_v1.h
src/serialization/RDB/decoder/previous/v2/: decode_v2.c  decode_v2.h
src/serialization/RDB/decoder/previous/v3/: decode_v3.c  decode_v3.h
src/serialization/RDB/encoder/: rai_rdb_encode.c  rai_rdb_encode.h
src/serialization/RDB/encoder/v1/: encode_v1.c  encode_v1.h
src/serialization/RDB/encoder/v100/: encode_v100.c  encode_v100.h
src/serialization/RDB/encoder/v2/: encode_v2.c  encode_v2.h
src/serialization/RDB/encoder/v3/: encode_v3.c  encode_v3.h
src/serialization/RDB/encoder/v4/: encode_v4.c  encode_v4.h
src/serialization/redis_ai_types/: model_type.c  model_type.h  script_type.c  script_type.h  tensor_type.c  tensor_type.h
src/util/: arr.h  arr_rm_alloc.h  dict.c  dict.h  dictionaries.c  dictionaries.h  queue.c  queue.h  rax.c  rax.h  rax_malloc.h  redisai_memory.h  siphash.c.inc  string_utils.c  string_utils.h
test/: autobatching.py  basic_tests.py  double-panda.py  includes.py  pt_api_test.c  test_requirements.txt  test_serializations.py  (+13 more)
test/unit/: CMakeLists.txt  unit_tests_err.cpp
tests/microbenchmarks/: CMakeLists.txt  microbenchmark_tensor.cpp
tests/unit/: CMakeLists.txt  rmalloc.h  tests.sh  unit_tests_AsyncDagRun.cpp  unit_tests_err.cpp  unit_tests_tensor.cpp
util/libtorch_c/: CMakeLists.txt  torch_c.cpp  torch_c.h
(+179 files in other folders)
